Added media quries

--- a/views/_adminViewEmployees.ejs
+++ b/views/_adminViewEmployees.ejs
@@ -37,7 +37,7 @@
             </div>
 
           </form>
-            <ul class="list-group list-group-flush">
+            <ul class="list-group list-group-flush media-queries">
                 <% for(let user of users) { %> 
                 <li class="list-group-item"  style="margin-bottom:2%;">
                     <div style="display: inline-block;width:40%;margin-left:5%;"><span ><%=user.name%>  </span></div>
