--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -45,3 +45,19 @@
     padding-left:50px;
     padding-right:50px;
 }
+
+@media only screen and (max-width: 600px) {
+    body{
+        font-size: 1rem;
+    }
+    .media-queries{
+        font-size: 0.8rem;
+    }
+    .media-queries button{
+        font-size: 0.4rem;
+    }
+    #add-new-employee-btn{
+        font-size: 0.8rem;
+        width:40%;
+    }
+ }
